src/objects/Survey_Responses__c.object
<CustomObject>
    <description>Integrates with Survey Tool and stores responses</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account related to this survey</description>
        <inlineHelpText>Account related to this survey</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Booking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Booking related to this survey</description>
        <inlineHelpText>Booking related to this survey</inlineHelpText>
        <label>BSC Event Booking</label>
        <referenceTo>Special_Event_Booking__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact related to this survey</description>
        <inlineHelpText>Contact related to this survey</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Time and date the survey was completed</description>
        <inlineHelpText>Time and date the survey was completed</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Opportunit related to this survey</description>
        <inlineHelpText>Opportunit related to this survey</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_Response_1__c</fullName>
        <label>Q1 Response 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Response_1__c</fullName>
        <label>Q2 Response 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Response_2__c</fullName>
        <label>Q2 Response 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <description>Holds response to question 1</description>
        <inlineHelpText>Holds response to question 1</inlineHelpText>
        <label>Question 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <description>Holds response to question 2</description>
        <inlineHelpText>Holds response to question 2</inlineHelpText>
        <label>Question 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_2_b__c</fullName>
        <label>Question 2 b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_2_c__c</fullName>
        <label>Question 2 c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <description>Holds response to question 3</description>
        <inlineHelpText>Holds response to question 3</inlineHelpText>
        <label>Question 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_4b__c</fullName>
        <label>Question 4b</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_4c__c</fullName>
        <label>Question 4c</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_4d__c</fullName>
        <label>Question 4d</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Time and date the survey was started</description>
        <inlineHelpText>Time and date the survey was started</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Subscription related to this survey</description>
        <inlineHelpText>Subscription related to this survey</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>Survey Name</description>
        <label>Survey Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <description>Links to Survey Response</description>
        <inlineHelpText>Links to Survey Response</inlineHelpText>
        <label>Survey Response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Summary__c</fullName>
        <description>Links to Survey Summary</description>
        <inlineHelpText>Links to Survey Summary</inlineHelpText>
        <label>Survey Summary</label>
        <type>Url</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Survey Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>